# finguard

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/agents/: __init__.py  adjudicator.py  dispatcher.py  final_reviewer.py  graph.py  reviewer.py
backend/api/v1/: documents.py  health.py  knowledge.py  reviews.py
backend/core/: __init__.py  celery_app.py  config.py  database.py
backend/models/: __init__.py  document.py  regulation.py  review.py
backend/services/: __init__.py  document_parser.py  embedding.py  knowledge_graph.py  llm_service.py  rag_engine.py
backend/skills/: __init__.py  doc_comparison.py  table_extraction.py
docker/: Dockerfile.api  Dockerfile.frontend  milvus.yaml  nginx.conf  prometheus.yml
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js  mock.js
frontend/src/components/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/views/: Dashboard.vue  Documents.vue  Knowledge.vue  Login.vue  ReviewDetail.vue  Reviews.vue
scripts/: init_db.py  seed_data.py
tests/: __init__.py  test_agents.py  test_services.py
