[project]
name = "finguard"
version = "0.1.0"
description = "FinGuard - 金融合规文档智能审核系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-milvus>=0.1.0",
    "langchain-neo4j>=0.1.0",
    "llama-index>=0.11.0",
    "llama-index-vector-stores-milvus>=0.3.0",
    "llama-index-readers-file>=0.2.0",
    "neo4j>=5.20.0",
    "pymilvus>=2.4.0",
    "milvus-lite>=2.4.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "openai>=1.40.0",           # vLLM 兼容 OpenAI API
    "python-multipart>=0.0.12",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",          # PDF 解析
    "camelot-py>=0.11.0",        # 表格抽取
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=3.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
prod = [
    "gunicorn>=23.0.0",
    "prometheus-client>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
